--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,9 @@ dependencies:
   flutter_local_notifications: ^19.5.0
   timezone: ^0.10.1
   http: ^1.6.0
+  provider: ^6.1.2
+  flutter_polyline_points: ^2.1.0
+  permission_handler: ^11.3.1
 
 dev_dependencies:
   flutter_test:
