--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,7 @@ dependencies:
   flutter_local_notifications: ^19.5.0
   timezone: ^0.10.1
   http: ^1.6.0
+  provider: ^6.1.1
 
 dev_dependencies:
   flutter_test:
